# django-pulu

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: pre-commit.yml  release-please.yml  test.yml
helsinki_notification/: admin.py  apps.py  models.py  settings.py
helsinki_notification/contrib/rest_framework/: urls.py  views.py
helsinki_notification/migrations/: 0001_initial.py  0002_alter_notification_type.py  0003_alter_notification_options.py
helsinki_notification/views/: rest_framework.py
pulu/: admin.py  apps.py  models.py
pulu/migrations/: 0002_alter_notification_type.py  0003_alter_notification_options.py
pulu/views/: rest_framework.py
pulu_tests/: conftest.py  factories.py  manage.py  settings.py  test_models.py  test_views.py  urls.py  utils.py
tests/: conftest.py  factories.py  settings.py  test_models.py  test_settings.py  test_views.py  urls.py  utils.py
tests/contrib/: test_rest_framework.py
tests/fixtures/: quickstart.json
