[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-helsinki-notification"
authors = [{ name = "City of Helsinki", email = "dev@hel.fi" }]
description = "Notifications for City of Helsinki Django apps 🔔"
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "django",
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["django>=4.2",]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-django",
    "pytest-factoryboy",
    "factory_boy",
    "freezegun",
    "coverage-enable-subprocess",
    "coverage[toml]",
    "pytest-mock",
    "pytest-randomly",
    "pytest-rerunfailures",
    "pytest-xdist[psutil]",
]
rest_framework = ["djangorestframework"]
all = ["django-helsinki-notification[rest_framework]", "django-helsinki-notification[test]"]

[project.urls]
Homepage = "https://github.com/City-of-Helsinki/django-helsinki-notification"
Issues = "https://github.com/City-of-Helsinki/django-helsinki-notification/issues"

[tool.hatch.build.targets.wheel]
packages = ["helsinki_notification"]

[tool.hatch.version]
path = "helsinki_notification/__init__.py"

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
lint = [
    "pre-commit install",
    "pre-commit run -a",
]

[tool.hatch.envs.hatch-test]
default-args = ["tests"]
features = ["all"]
matrix-name-format = "dj{value}"
parallel = false
randomize = true

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.9"]
django = ["4.2"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12"]
django = ["4.2", "5.0", "5.1"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.13"]
django = ["5.1"]

[tool.hatch.envs.hatch-test.overrides]
matrix.django.dependencies = [
    { value = "django~={matrix:django}" },
]

[tool.hatch.envs.hatch-test.scripts]
run = [
    "./tests/manage.py makemigrations --check",
    "pytest{env:HATCH_TEST_ARGS:} {args}",
]
run-cov = "coverage run -m pytest{env:HATCH_TEST_ARGS:} {args}"
cov-combine = "coverage combine"
cov-report = "coverage report"

[tool.pytest.ini_options]
django_find_project = false
testpaths = [
    "tests",
]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = "."

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-bugbear without opinionated rules
    "B0",
    # flake8-pie
    "PIE",
    # flake8-print
    "T20",
]
